@@ -6,15 +6,17 @@ xcode_scheme: LzmaSDK-ObjC
 podfile: tests/ios/Podfile
 
 # current
-osx_image: xcode7.2
-xcode_sdk: iphonesimulator9.2
+#osx_image: xcode7.2
+#xcode_sdk: iphonesimulator9.2
 
-#matrix:
-#  include:
-#    # beta
-#    - os: osx
-#      osx_image: xcode7.3
-#      xcode_sdk: iphonesimulator9.3
+matrix:
+  include:
+    - os: osx
+      osx_image: xcode7.3
+      xcode_sdk: iphonesimulator9.3
+    - os: osx
+      osx_image: xcode7.2
+      xcode_sdk: iphonesimulator9.2
 
 
 before_install:
