@@ -1,6 +1,10 @@
 Lzma SDK for Objective-C based on extended functionality of the C++ LZMA code
 
-Changes on version 1.1.4 (current):
+Changes on version 1.1.5 (current):
+- Added error possible failure reason description.
+  Use `NSLocalizedFailureReasonErrorKey` to get possible failure string.
+
+Changes on version 1.1.4:
 - Update C++ source to version 16.02 (1602 - latest for now).
 
 Changes on version 1.1.3 (current):
